[package]
name = "polymap"
version = "0.1.0"
authors = ["PicoJr <picojr_dev@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.10"
termion = "1.5"
nalgebra = "0.18"
rocket = "0.4.5"
serde = "1.0"
serde_json = "1.0"
geo-types = "0.6.0"
geojson = { version = "0.19.0", features=["geo-types"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
